[package]
name = "sharpie"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = {version = "2.8.0", features = ["serde"]}
clap = { version = "4.5.53", features = ["derive"] }
derive_builder = "0.20.2"
format_num = "0.1.0"
rfd = "0.16.0"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
slint = "1.14.1"

[build-dependencies]
slint-build = "1.14.1"

